--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
             <tbody id="candidatesResults"></tbody>
         </table>
 
-        <form onSubmit="App.castVote(); return false;">
+        <form onSubmit="App.doVote(); return false;">
             <div class="form-group">
                 <label for="candidatesSelect">Select Candidate</label>
 
