--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Bachelor Election/title>
+    <title>Bachelor Election</title>
 
     <link href="css/styling.css" rel="stylesheet">
     <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
@@ -22,7 +22,7 @@
 
     <div class="w3-container">
 
-        <div id ="loader"></div>
+        <div id="loader"></div>
         <table class="w3-table w3-striped">
             <thead>
             <tr>
@@ -31,29 +31,27 @@
                 <th scope="col">Votes</th>
             </tr>
             </thead>
-            <tbody id="candidatesResults"></tbody>
+            <tbody id="results"></tbody>
         </table>
-
-        <form onSubmit="App.doVote(); return false;">
-            <div class="form-group">
-                <label for="candidatesSelect">Select Candidate</label>
-
-                <select class="w3-select w3-border" id="candidatesSelect" name="option"></select>
+        <form onSubmit="App.candidateVote(); return false;">
+            <div class="form-group" id="content">
+                <label for="selectCandidate">Select Candidate</label>
+                <select class="w3-select w3-border" id="selectCandidate" name="option"></select>
             </div>
             <p>
                 <button class="w3-button w3-blue" type="submit">Vote</button>
             </p>
-            <hr/>
+            <hr>
         </form>
-<!--        <div id="chartContainer" style="height: 370px; width: 100%;"></div>-->
+        <!--        <div id="chartContainer" style="height: 370px; width: 100%;"></div>-->
     </div>
 
     <footer class="w3-container w3-blue">
         <p id="accountAddress"></p>
+        <p id="accountBalance"></p>
     </footer>
 
 </div>
-
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
