--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,10 @@
     </header>
 
     <div class="w3-container">
-
+        <div id="alert">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+            <strong>Error</strong> You need to grant MetaMask access for you to vote!
+        </div>
         <div id="loader"></div>
         <table class="w3-table w3-striped">
             <thead>
@@ -35,8 +38,8 @@
         </table>
         <form onSubmit="App.candidateVote(); return false;">
             <div class="form-group" id="content">
-                <label for="selectCandidate">Select Candidate</label>
-                <select class="w3-select w3-border" id="selectCandidate" name="option"></select>
+                <label for="pickCandidate">Select Candidate</label>
+                <select class="w3-select w3-border" id="pickCandidate" name="option"></select>
             </div>
             <p>
                 <button class="w3-button w3-blue" type="submit">Vote</button>
@@ -47,8 +50,8 @@
     </div>
 
     <footer class="w3-container w3-blue">
-        <p id="accountAddress"></p>
-        <p id="accountBalance"></p>
+        <p id="address"></p>
+        <p id="balance"></p>
     </footer>
 
 </div>
