--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <div class="w3-container">
         <div id="alert">
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-            <strong>Error</strong> You need to grant MetaMask access for you to vote!
+            <strong>Error</strong> Error - You already voted! If not, reconnect with MetaMask!
         </div>
         <div id="loader"></div>
         <table class="w3-table w3-striped">
@@ -36,7 +36,7 @@
             </thead>
             <tbody id="results"></tbody>
         </table>
-        <form onSubmit="App.candidateVote(); return false;">
+        <form onSubmit="ElectionApp.candidateVote(); return false;">
             <div class="form-group" id="content">
                 <label for="pickCandidate">Select Candidate</label>
                 <select class="w3-select w3-border" id="pickCandidate" name="option"></select>
@@ -58,7 +58,6 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
 <script src="js/web3.min.js"></script>
 <script src="js/truffle-contract.js"></script>
 <script src="js/app.js"></script>
